# city-names-gen

./: README.md  city-name-gen.py  pyproject.toml  some-city-names.txt
