[tool.poetry]
name = "city-names-gen"
version = "0.1.0"
description = "A city generator you can use to generate city names, wrapping a API."
authors = ["sairam4123 <opencity@info.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
